--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,6 @@ body {
 }
 
 @font-face {
-    font-family: seven_segment;
-    src: url( 'http://torinak.com/font/7segment.ttf' ) ;
+    font-family: 'seven_segment';
+    src: url( 'http://torinak.com/font/7segment.ttf' ) format('truetype');
 }
