fonts not working on github-pages

--- a/css/index.css
+++ b/css/index.css
@@ -24,5 +24,5 @@ body {
 
 @font-face {
     font-family: 'seven_segment';
-    src: url( 'http://torinak.com/font/7segment.ttf' ) format('truetype');
+    src: url( '../css/seven_segment.ttf' ) format('truetype');
 }
