--- a/css/index.css
+++ b/css/index.css
@@ -24,5 +24,5 @@ body {
 
 @font-face {
     font-family: 'seven_segment';
-    src: url( './seven_segment.ttf' ) format('truetype');
+    src: url( 'seven_segment.ttf' ) format('truetype');
 }
